# gliner-rs-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  nginx.conf  run_tests.sh  setup-models.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
