[package]
name = "gliner-rs-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
gline-rs = { version = "1.0.0", features = ["load-dynamic"] }
regex = "1.11.1"
orp = "0.9.2"

[dev-dependencies]
